system/restrict-default-namespace.yaml
# Default namespace wordt disabled zodat aangemaakte team-namespaces gebruikt worden
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRestrictNamespaces
metadata:
  name: restrict-default-namespace-use
spec:
  enforcementAction: deny
  parameters:
    restrictedNamespaces:
    - default
